# ChangeLog for sci-libs/djbfft
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-libs/djbfft/ChangeLog,v 1.12 2012/05/17 13:52:51 aballier Exp $

  17 May 2012; Alexis Ballier <aballier@gentoo.org> djbfft-0.76-r1.ebuild:
  keyword ~amd64-fbsd

*djbfft-0.76-r1 (10 Oct 2008)

  10 Oct 2008; Sébastien Fabbro <bicatali@gentoo.org>
  +files/djbfft-0.76-headers.patch, files/djbfft-0.76-shared.patch,
  metadata.xml, +djbfft-0.76-r1.ebuild:
  QA fixes: soname (closing bug #158373, missing header files, separate
  tests and library building, remove forced flags for x86.

  06 Apr 2008; Benedikt Böhm <hollow@gentoo.org> djbfft-0.76.ebuild:
  fix LICENSE, bug #204327

  07 Apr 2007; Stefan Schweizer <genstef@gentoo.org> djbfft-0.76.ebuild:
  Fix location for amd64 and remove USE=static, bug 173624 thanks to Georgi
  Chulkov <g.chulkov@iu-bremen.de>, Thomas A. (gentoofan23)
  <gentoofan23@gmail.com>, philantrop and jakub

  04 Feb 2007; Simon Stelling <blubb@gentoo.org> djbfft-0.76.ebuild:
  fix multilib-strict; bug 158373

  06 Jul 2006; Diego Pettenò <flameeyes@gentoo.org> djbfft-0.76.ebuild:
  Add ~x86-fbsd keyword.

  16 Sep 2005; Aron Griffis <agriffis@gentoo.org> djbfft-0.76.ebuild:
  Mark 0.76 stable on alpha

  19 Apr 2005; Luca Barbato <lu_zero@gentoo.org> djbfft-0.76.ebuild:
  Marked ppc

  22 Feb 2005; Patrick Kursawe <phosphan@gentoo.org> djbfft-0.76.ebuild:
  Fixing bug #82804 by adding dummy src_test function

  26 Jan 2005; Markus Rothe <corsair@gentoo.org> djbfft-0.76.ebuild:
  Stable on ppc64 as dependency of media-libs/a52dec-0.7.4-r3

*djbfft-0.76 (28 Dec 2004)

  28 Dec 2004; Olivier Fisette <ribosome@gentoo.org> +metadata.xml,
  +files/djbfft-0.76-gcc3.patch, +files/djbfft-0.76-shared.patch,
  +djbfft-0.76.ebuild:
  Moved from dev-libs/djbfft to sci-libs/djbfft.

  23 Nov 2004; Bryan Østergaard <kloeri@gentoo.org> djbfft-0.76.ebuild:
  ~alpha keyword.
