@@ -5,14 +5,14 @@ AUX djbfft-0.76-gcc3.patch 1176 RMD160 8c49fb74f011c329c13dcb7bbe7891d1f3d5a7aa 
 AUX djbfft-0.76-headers.patch 995 RMD160 67d48046060923882a40aab7d8b51962dc0a9c96 SHA1 c5403ccae24f90ba3dbe65b08c8145284691e309 SHA256 783ef6cf4b82af55efc6d038aa0fe2f76c81dcd52393444fa0ca438c9ebee483
 AUX djbfft-0.76-shared.patch 3722 RMD160 a958cf5bf50e41240d5bb59d46da330ed31abbf2 SHA1 9e41f833045be02d8fb951d4df1944b27b50f23a SHA256 bbe7f027a29428265e44d4f966808b4d752c523c340d13d8f037233bc45e6ad1
 DIST djbfft-0.76.tar.gz 80092 RMD160 46de3a7ed5d6ca4b245d02a12d969702e57f7381 SHA1 df9d258a75183c10592d937ee2d2befc01a8a0f6 SHA256 799d929c3631a77ef0e16a2449e4fc11af8540b62359f8733ac2899fca2b394c
-EBUILD djbfft-0.76-r1.ebuild 1948 RMD160 c15e7b2472cf4d7e696ffc416ce378c69fd55203 SHA1 ad51070a499f0f0b1e686247e9034001d8b4d742 SHA256 5cf121456639bb705da46c36900c1af1f5b9fbdf7ba7741e8262485329ab581a
+EBUILD djbfft-0.76-r1.ebuild 1723 RMD160 31c7a3c521aee641f30f462d91100bb83403b556 SHA1 bc86dd1c622a5c8bef682483f7e4f5129998239f SHA256 805877a305d2f312a3043100a781e4d6d8627d2b2c0a32b93aa8138bb24ceaf3
 EBUILD djbfft-0.76.ebuild 1795 RMD160 758507ee39ed8ad32c50be799872f3e50284be3c SHA1 b635f33d565873d8a4b317f1ad85b376f2779850 SHA256 2986577d37ef85b42fb66d24389bc11b4116d271536484c0ea2e6a2d0f318f95
-MISC ChangeLog 3265 RMD160 0bf1a079a2fa1ceec71e397ef5b252fa17a0184e SHA1 bee8e772bcf91aa1116d8ee66841c94216b84779 SHA256 ea1e91360d3264f30021ce96e45f65cdbf6a10bd1732eadb7f0ce37ea473f3f2
+MISC ChangeLog 3407 RMD160 911f26dfdb4a018edebe0681cb21a17b1d02dc1d SHA1 27fd853d69cce97eaa3a3ff998d01de15334da1a SHA256 3cba6f29775c6f0add6d789acbb0700181dc92cdcab0bb3663c9161806675c5e
 MISC metadata.xml 628 RMD160 ca1ccd6951c4a98395e8f739275320727a0f3136 SHA1 d57f886a3f35612e176bf8876af99dd81f68f021 SHA256 d7aa1200cc1fa91800f0196bd6bbf0298f63d6669184e27e311fe075ee14f58c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEARECAAYFAk+1ArgACgkQvFcC4BYPU0rcOwCfeEyxzqabepM9Pw4Dm6RTWJWp
-dnEAniKv/zmT6WCK0DrizMbEn2Kxa2DF
-=zkpl
+iEYEARECAAYFAk/rsHcACgkQ1ycZbhPLE2AsvACfbeWRJsPmQT7B6G9BiAk7UC4O
+nPIAn0b3/I1EHXJ4j7J/1zsoQlciuUU4
+=NmEq
 -----END PGP SIGNATURE-----
