@@ -1,6 +1,9 @@
 # ChangeLog for sci-libs/djbfft
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/djbfft/ChangeLog,v 1.12 2012/05/17 13:52:51 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/djbfft/ChangeLog,v 1.13 2012/06/28 01:12:40 bicatali Exp $
+
+  28 Jun 2012; Sébastien Fabbro <bicatali@gentoo.org> djbfft-0.76-r1.ebuild:
+  Switched to EAPI4. keyword ~amd64-linux ~x86-linux. cleaning
 
   17 May 2012; Alexis Ballier <aballier@gentoo.org> djbfft-0.76-r1.ebuild:
   keyword ~amd64-fbsd
